--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.13.2",
     "chart.js": "^4.5.1",
     "react": "^19.2.0",
+    "react-calendar": "^6.0.0",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "^19.2.0",
     "react-router-dom": "^7.11.0"
